--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 dj-database-url==0.4.1
 Django==1.9
 django-annoying==0.10.3
-django-registration==2.2
+django-allauth==0.30.0
 django-scheduler==0.8.2
 gunicorn==19.6.0
 icalendar==3.11.1
